fix: distorted button in mobile

--- a/client/src/components/HomePage/index.css
+++ b/client/src/components/HomePage/index.css
@@ -181,7 +181,7 @@
 
     .headline-button {
         margin: 0 8px;
-        width: 75px;
+        /* width: 75px; */
         height: auto;
         font-size: 10px !important;
         justify-content: center;
